--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+
 {% block content %}
 {% load static %}
 <html lang="en">
@@ -4273,7 +4273,8 @@
             <strong>Orbital Axis:</strong> ${data.OrbitAxis} years<br>
             <strong>Perihelion Distance (q):</strong> ${data.q_au_1} AU<br>
             <strong>Minimum Orbit Intersection Distance (q):</strong> ${data.q_au_1} AU<br>
-            <strong>Orbital Period:</strong> ${data.p_yr} years
+            <strong>Orbital Period:</strong> ${data.p_yr} years<br>
+            <strong>minimum orbit intersection distance:</strong>>${data.Minimu_Orbit_Intersection_Distance}<br>
         `;
     } else {
         infoContent = `
@@ -4282,7 +4283,11 @@
             <strong>Object Inclination (i):</strong> ${data.i_deg}°<br>
             <strong>Orbital Axis:</strong> ${data.p_yr} years<br>
             <strong>Perihelion Distance (q):</strong> ${data.q_au_1} AU<br>
-            <strong>Orbital Period:</strong> ${data.p_yr} years
+            <strong>Orbital Period:</strong> ${data.p_yr} years<br>
+
+            <strong>Predicted Years to danger:</strong>>${data.Predicted_Years_to_danger}<br>
+            <strong>Predicted Hazardous:</strong>${data.Predicted_Hazardous}<br>
+
         `;
     }
 
