--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -4274,7 +4274,7 @@
             <strong>Perihelion Distance (q):</strong> ${data.q_au_1} AU<br>
             <strong>Minimum Orbit Intersection Distance (q):</strong> ${data.q_au_1} AU<br>
             <strong>Orbital Period:</strong> ${data.p_yr} years<br>
-            <strong>minimum orbit intersection distance:</strong>>${data.Minimu_Orbit_Intersection_Distance}<br>
+            <strong>minimum orbit intersection distance:</strong>${data.Minimu_Orbit_Intersection_Distance}<br>
         `;
     } else {
         infoContent = `
@@ -4285,7 +4285,7 @@
             <strong>Perihelion Distance (q):</strong> ${data.q_au_1} AU<br>
             <strong>Orbital Period:</strong> ${data.p_yr} years<br>
 
-            <strong>Predicted Years to danger:</strong>>${data.Predicted_Years_to_danger}<br>
+            <strong>Predicted Years to danger:</strong>${data.Predicted_Years_to_danger}<br>
             <strong>Predicted Hazardous:</strong>${data.Predicted_Hazardous}<br>
 
         `;
